<resources>
    <string name="app_name">EjemploChat</string>
    <!-- Textos de la vista Chat -->
    <string name="chat_header_image_desc">Imagen de encabezado</string>
    <string name="chat_title_text">Buscar usuario por correo</string>
    <string name="chat_email_hint">Correo electrónico</string>
    <string name="chat_search_button">Buscar</string>
    <string name="chat_middle_title">¡Ya puedes chatear online!.</string>
    <string name="chat_message_hint">Escribe un mensaje</string>
    <string name="chat_send_button">Enviar</string>

    <!-- Textos de la vista de inicio de sesión -->
    <string name="login_header_image_desc">Imagen del encabezado</string>
    <string name="login_title_text">Iniciar sesión</string>
    <string name="login_email_hint">Correo electrónico</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="login_register_text">¿No tienes una cuenta? Regístrate</string>

    <!-- Textos de la vista de registro -->
    <string name="register_header_image_desc">Imagen del encabezado</string>
    <string name="register_title_text">Registrarse</string>
    <string name="register_username_hint">Nombre de usuario</string>
    <string name="register_email_hint">Correo electrónico</string>
    <string name="register_password_hint">Contraseña</string>
    <string name="register_button_text">Registrarse</string>
    <string name="register_login_text">¿Ya tienes una cuenta? Inicia sesión</string>

    <!-- Referencia al archivo conversation_item.xml -->
    <string name="conversation_item_username">Nombre de usuario</string>
    <string name="conversation_item_message">Mensaje</string>
    <string name="conversation_item_time">Hora</string>

    <!-- item_mesagge.xml -->
    <!-- Vista para mostrar un mensaje en un CardView -->
    <string name="sender_name">Sender Name</string>
    <string name="message_text">Message Text</string>
    <string name="timestamp">Timestamp</string>

    <!-- item_user_found.xml -->
    <!-- Vista para mostrar información de un usuario encontrado -->
    <string name="title_user_found">Usuario encontrado</string>
    <string name="name_user">Nombre del usuario</string>
    <string name="email_user">Correo del usuario</string>
    <string name="chat_button">Chatear</string>











    <string name="app_name1">Chat - Java</string>

    <string name="default_web_client_id">802222593732-rf3vblocdt3osaefqtup0oahjbtv9mo4.apps.googleusercontent.com</string>

    <string name="item_perfil">Perfil</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="item_chats">Chats</string>

    <string name="tv_Titulo">Título</string>

    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>


    <string name="txt_login">Iniciar Sesión</string>
    <string name="et_Email">Correo electrónico</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>
    <string name="tv_iniciarSesion">Iniciar Sesión</string>
    <string name="tv_recuperar_cuenta">¿Olvidaste la contraseña?</string>

    <string name="txt_registro">Registro</string>
    <string name="et_Nombres">Nombre</string>
    <string name="et_R_Password">Repetir contraseña</string>
    <string name="btn_Registrar">Registrarme</string>

    <string name="btn_ActualizarInfo">Actualizar</string>
    <string name="btn_CambiarPass">Cambiar contraseña</string>
    <string name="btn_CerrarSesion">Cerrar sesión</string>

    <string name="cd_back_button">Botón de regreso</string>
    <string name="txt_nombres">Nombre de Usuario: </string>
    <string name="tv_nombres"> -- </string>
    <string name="txt_email">Email@chatverse.com </string>
    <string name="tv_email"> -- </string>
    <string name="txt_proveedor">Proveedor: </string>
    <string name="tv_proveedor"> -- </string>
    <string name="txt_t_registro">Miembro desde: </string>
    <string name="tv_t_registro"> -- </string>

    <string name="Txt_titulo_edit">Editar Perfil</string>
    <string name="btn_Actualizar">Actualizar</string>

    <string name="Txt_chatverse">ChatVerse</string>
    <string name="content_description_back">Regresar</string>
    <string name="Txt_Olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="Txt_ingrese_email">¡No te preocupes! Por favor, introduce la dirección\nde correo electrónico y vuelve a conectarte.</string>
    <string name="btn_Enviar">Enviar</string>

    <string name="back_button_descriptionchat">Back</string>
    <string name="adjuntar_fab_descriptionchat">Attach file</string>
    <string name="enviar_fab_descriptionchat">Send message</string>

    <string name="desc_back_button">Botón de retroceso</string>
    <string name="Txt_Crearnueva_contraseña">Crear Nueva Contraseña</string>
    <string name="Txt_ingrese_tu_nueva_con">Tu nueva contraseña debe ser única; asegúrate de\nque sea diferente a las que has usado antes.</string>
    <string name="Txt_cambiar_pass">Cambiar contraseña</string>
    <string name="et_pass_actual">Contraseña actual</string>
    <string name="et_pass_nueva">Contraseña nueva</string>
    <string name="et_r_pass_nueva">Repetir contraseña nueva</string>
    <string name="btn_CambiarPassword">Cambiar</string>
    <string name="back_button_descriptionCnueva">Regresar</string>

    <string name="item_uid">Uid del usuario</string>
    <string name="item_nombre">Nombre del usuario</string>
    <string name="item_email">Email del usuario</string>


    <string name="Txtcontactos">Contactos</string>
    <string name="et_buscar_usuario">Buscar usuario</string>
    <string name="txt_nombres_usuario">Nombre de Usuario</string>
    <string name="txt_estado_chat">Online</string>
    <string name="Et_mensaje_chat">Escriba algo</string>
    <string name="Tv_tiempo_mensaje">dd/MM/yyyy hh:mm</string>

    <string name="add_message">chatversefab</string>

    <string name="etBuscar">Buscar</string>
    <string name="tvFecha">dd/MM/yyyy</string>

    <string name="BtnCerrarVisualizador">Cerrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_home">Home</string>
    <string name="title_offers">Offers</string>
    <string name="title_cart">Cart</string>
    <string name="title_more">More</string>



</resources>