<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginTop="4dp"
    app:cardBackgroundColor="#ffffff"
    app:strokeWidth="0dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_perfil"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_img_perfil" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_uid"
                android:visibility="gone" />

            <TextView
                android:id="@+id/item_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/item_nombre"
                android:textColor="#0D141C"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/item_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_email"
                android:textColor="#4F7396" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>