<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FCF7F4"
    tools:context=".ActivityEditarInformacion">


    <ImageView
        android:id="@+id/iv_perfil_edit"
        android:layout_width="0dp"
        android:layout_height="399dp"
        android:layout_marginTop="76dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/perfil_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/IvEditarImg"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/pen"
        app:layout_constraintBottom_toBottomOf="@+id/iv_perfil_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen_encabezado"
        app:layout_constraintVertical_bias="0.588" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imagen_encabezado"
        android:layout_width="417dp"
        android:layout_height="131dp"
        android:scaleType="fitCenter"
        android:src="@drawable/headerbeige"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedCornersBottom2" />

    <ImageButton
        android:id="@+id/iv_back_editperfil"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="67dp"
        android:contentDescription="@string/desc_back_button"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/imagen_encabezado"
        app:layout_constraintEnd_toStartOf="@+id/Txt_titulo_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Txt_titulo_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/manrope_extrabold"
        android:text="@string/Txt_titulo_edit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagen_encabezado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TILNombres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="none"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/editperfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_perfil_edit">

        <EditText
            android:id="@+id/et_Nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_background"
            android:hint="@string/et_Nombres"
            android:inputType="textPersonName|textCapWords"
          />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Actualizar"
        android:layout_width="230dp"
        android:layout_height="52dp"
        android:layout_below="@id/TILNombres"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/btn_Actualizar"
        android:textColor="#232C35"
        app:backgroundTint="#ECDDD4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TILNombres" />


</androidx.constraintlayout.widget.ConstraintLayout>

